# VIO_Stereo_VINS

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  vio.cpp  vio.h  vio_config.cpp  vio_config.h
src/backend/: CMakeLists.txt  backend.h  backend_data_process.cpp  backend_data_processor.cpp  backend_log.cpp  backend_log.h  backend_log_recorder.cpp  backend_main.cpp  backend_selfcheck.cpp  backend_visualizor.cpp
src/backend/estimator/: estimator.cpp  graph_generate.cpp  inertial_edges.h  marginalizor.cpp  visual_edges.h
src/backend/graph_manager/: backend_graph_manager.cpp  general_edges.h  inertial_edges.h  visual_edges.h  visual_inertial_edges.h
src/backend/initializor/: initializor.cpp  initializor_estimate_bias_gyro.cpp  initializor_estimate_velocity_and_gravity.cpp  initializor_visual_inertial.cpp  initializor_visual_only.cpp
src/backend/map_manager/: map_manager.cpp
src/data_loader/: CMakeLists.txt  data_loader.cpp  data_loader.h  data_loader_log.cpp  data_loader_log.h
src/data_manager/: CMakeLists.txt  data_manager.cpp  data_manager.h  data_manager_log.cpp  data_manager_log.h  data_manager_self_check.cpp  data_manager_visualize.cpp
src/frontend/: CMakeLists.txt  visual_frontend.cpp  visual_frontend.h
test/: test_vio.cpp
